// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="areas.content"
>
  <section
    className="ant-layout {}"
    id="areas.content_layout"
  >
    <main
      className="ant-layout-content {}"
      id="areas.content_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render areas.footer - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="areas.footer"
>
  <section
    className="ant-layout {}"
    id="areas.footer_layout"
  >
    <main
      className="ant-layout-content {}"
      id="areas.footer_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
    id="areas.footer_footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render areas.header - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="areas.header"
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":false},null,null]} hide-on-print"
    id="areas.header_header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout {}"
    id="areas.header_layout"
  >
    <main
      className="ant-layout-content {}"
      id="areas.header_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render areas.sider - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="areas.sider"
>
  <section
    className="ant-layout ant-layout-has-sider {}"
    id="areas.sider_layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark"
      id="areas.sider_sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {}"
      id="areas.sider_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render default - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="default"
>
  <section
    className="ant-layout {}"
    id="default_layout"
  >
    <main
      className="ant-layout-content {}"
      id="default_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render properties.content.style: border: 5px solid blue - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.content.style: border: 5px solid blue"
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":false},null,null]} hide-on-print"
    id="properties.content.style: border: 5px solid blue_header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout ant-layout-has-sider {}"
    id="properties.content.style: border: 5px solid blue_layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark"
      id="properties.content.style: border: 5px solid blue_sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {\\"style\\":{\\"border\\":\\"5px solid blue\\"}}"
      id="properties.content.style: border: 5px solid blue_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
    id="properties.content.style: border: 5px solid blue_footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.footer.style: border: 5px solid blue - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.footer.style: border: 5px solid blue"
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":false},null,null]} hide-on-print"
    id="properties.footer.style: border: 5px solid blue_header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout ant-layout-has-sider {}"
    id="properties.footer.style: border: 5px solid blue_layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark"
      id="properties.footer.style: border: 5px solid blue_sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {}"
      id="properties.footer.style: border: 5px solid blue_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},{\\"border\\":\\"5px solid blue\\"}]} hide-on-print"
    id="properties.footer.style: border: 5px solid blue_footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.header.color: #4432a8  - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.header.color: #4432a8 "
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":false},{\\"backgroundColor\\":\\"#4432a8\\"},null]} hide-on-print"
    id="properties.header.color: #4432a8 _header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout ant-layout-has-sider {}"
    id="properties.header.color: #4432a8 _layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark"
      id="properties.header.color: #4432a8 _sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {}"
      id="properties.header.color: #4432a8 _content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
    id="properties.header.color: #4432a8 _footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.header.style: border: 5px solid blue - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.header.style: border: 5px solid blue"
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":false},null,{\\"border\\":\\"5px solid blue\\"}]} hide-on-print"
    id="properties.header.style: border: 5px solid blue_header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout ant-layout-has-sider {}"
    id="properties.header.style: border: 5px solid blue_layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark"
      id="properties.header.style: border: 5px solid blue_sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {}"
      id="properties.header.style: border: 5px solid blue_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
    id="properties.header.style: border: 5px solid blue_footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.header.theme: light - dark is default - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.header.theme: light - dark is default"
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":\\"#fff\\"},null,null]} hide-on-print"
    id="properties.header.theme: light - dark is default_header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout ant-layout-has-sider {}"
    id="properties.header.theme: light - dark is default_layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark"
      id="properties.header.theme: light - dark is default_sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {}"
      id="properties.header.theme: light - dark is default_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
    id="properties.header.theme: light - dark is default_footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.main.style: border: 5px solid blue - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.main.style: border: 5px solid blue"
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":false},null,null]} hide-on-print"
    id="properties.main.style: border: 5px solid blue_header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout ant-layout-has-sider {\\"style\\":{\\"border\\":\\"5px solid blue\\"}}"
    id="properties.main.style: border: 5px solid blue_layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark"
      id="properties.main.style: border: 5px solid blue_sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {}"
      id="properties.main.style: border: 5px solid blue_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
    id="properties.main.style: border: 5px solid blue_footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.sider.style: border: 5px solid blue - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.sider.style: border: 5px solid blue"
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":false},null,null]} hide-on-print"
    id="properties.sider.style: border: 5px solid blue_header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout ant-layout-has-sider {}"
    id="properties.sider.style: border: 5px solid blue_layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},{\\"border\\":\\"5px solid blue\\"}]} hide-on-print ant-layout-sider ant-layout-sider-dark"
      id="properties.sider.style: border: 5px solid blue_sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {}"
      id="properties.sider.style: border: 5px solid blue_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
    id="properties.sider.style: border: 5px solid blue_footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.sider.theme: light - dark is default - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.sider.theme: light - dark is default"
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":false},null,null]} hide-on-print"
    id="properties.sider.theme: light - dark is default_header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout ant-layout-has-sider {}"
    id="properties.sider.theme: light - dark is default_layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-light"
      id="properties.sider.theme: light - dark is default_sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {}"
      id="properties.sider.theme: light - dark is default_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
    id="properties.sider.theme: light - dark is default_footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.style: border: 5px solid blue - value[0] 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\",\\"border\\":\\"5px solid blue\\"}}"
  id="properties.style: border: 5px solid blue"
>
  <header
    className="ant-layout-header {\\"style\\":[{\\"backgroundColor\\":false},null,null]} hide-on-print"
    id="properties.style: border: 5px solid blue_header"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      header
    </div>
  </header>
  <section
    className="ant-layout ant-layout-has-sider {}"
    id="properties.style: border: 5px solid blue_layout"
  >
    <aside
      className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark"
      id="properties.style: border: 5px solid blue_sider"
      style={
        Object {
          "flex": "0 0 200px",
          "maxWidth": "200px",
          "minWidth": "200px",
          "width": "200px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          sider
        </div>
      </div>
    </aside>
    <main
      className="ant-layout-content {}"
      id="properties.style: border: 5px solid blue_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
  <footer
    className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
    id="properties.style: border: 5px solid blue_footer"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema areas.footer 1`] = `true`;

exports[`Test Schema areas.footer 2`] = `null`;

exports[`Test Schema areas.header 1`] = `true`;

exports[`Test Schema areas.header 2`] = `null`;

exports[`Test Schema areas.sider 1`] = `true`;

exports[`Test Schema areas.sider 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.content.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.footer.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.footer.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.header.color: #4432a8  1`] = `true`;

exports[`Test Schema properties.header.color: #4432a8  2`] = `null`;

exports[`Test Schema properties.header.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.header.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.header.theme: light - dark is default 1`] = `true`;

exports[`Test Schema properties.header.theme: light - dark is default 2`] = `null`;

exports[`Test Schema properties.main.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.main.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.sider.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.sider.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.sider.theme: light - dark is default 1`] = `true`;

exports[`Test Schema properties.sider.theme: light - dark is default 2`] = `null`;

exports[`Test Schema properties.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.style: border: 5px solid blue 2`] = `null`;
